fix contrast for alpha nav

--- a/templates/browse_author.css
+++ b/templates/browse_author.css
@@ -26,12 +26,12 @@
 }
 
 .alpha-nav a {
-  color: #62708d;
+  color: #414A5D;
   background: #e2e6f0;
 }
 
 .alpha-nav a:hover {
-  background: #62708d;
+  background: #414A5D;
   color: #fff;
 }
 
